--- a/Lazztech.ObsidianPresences.ClientFacade/Lazztech.ObsidianPresences.ClientFacade.csproj
+++ b/Lazztech.ObsidianPresences.ClientFacade/Lazztech.ObsidianPresences.ClientFacade.csproj
@@ -16,8 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Lazztech.DIContext\Lazztech.DIContext.csproj" />
     <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.csproj" />
     <ProjectReference Include="..\Lazztech.ObsidianPresences.Vision.Microservice.Domain\Lazztech.ObsidianPresences.Vision.Microservice.Domain.csproj" />
+    <ProjectReference Include="..\Lazztech.SmsDaemon\Lazztech.SmsDaemon.csproj" />
   </ItemGroup>
 
   <ItemGroup>
