--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
 #      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
 #      - C:\face_recognition:/face/
       - lazztech-cloud-data:/face/
-    environment:
-      DB_CONNECTION_STRING: "host=postgres_image;port=5432;database=values_db;username=dbuser;password=dbpwd"
+#    environment:
     ports: 
       - 80:80
     build:
